# preduce

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  rustfmt.toml
ci/: script.sh
preduce_balanced_reducer/: Cargo.toml
preduce_balanced_reducer/src/: lib.rs
preduce_chunks_reducer/: Cargo.toml
preduce_chunks_reducer/src/: lib.rs
preduce_clang_delta_reducer/: Cargo.toml
preduce_clang_delta_reducer/src/: lib.rs
preduce_clex_reducer/: Cargo.toml
preduce_clex_reducer/src/: lib.rs
preduce_ipc_types/: Cargo.toml
preduce_ipc_types/src/: lib.rs
preduce_ranges_reducer/: Cargo.toml
preduce_ranges_reducer/src/: lib.rs
preduce_reducer_script/: Cargo.toml
preduce_reducer_script/src/: lib.rs
preduce_regex_reducer/: Cargo.toml
preduce_regex_reducer/src/: lib.rs
preduce_topformflat_reducer/: Cargo.toml
preduce_topformflat_reducer/src/: lib.rs
reducers/: balanced-angle.py  balanced-angle.rs  balanced-curly.py  balanced-paren.py  balanced-paren.rs  balanced-square.py  balanced-square.rs  blank.py  blank.rs  chunks.py  chunks.rs  clang-delta-aggregate-to-scalar.py  clang-delta-callexpr-to-value.py  clang-delta-callexpr-to-value.rs  clang-delta-class-template-to-class.py  clang-delta-combine-global-var.py  clang-delta-combine-global-var.rs  clang-delta-combine-local-var.py  clang-delta-combine-local-var.rs  clang-delta-copy-propagation.py  clang-delta-copy-propagation.rs  clang-delta-empty-struct-to-int.py  clang-delta-empty-struct-to-int.rs  clang-delta-instantiate-template-param.py  clang-delta-instantiate-template-type-param-to-int.py  clang-delta-lift-assignment-expr.py  clang-delta-local-to-global.py  clang-delta-move-function-body.py  clang-delta-move-function-body.rs  clang-delta-move-global-var.py  clang-delta-move-global-var.rs  clang-delta-param-to-global.py  clang-delta-param-to-global.rs  clang-delta-param-to-local.py  clang-delta-reduce-array-dim.py  clang-delta-reduce-array-dim.rs  clang-delta-reduce-array-size.py  clang-delta-reduce-array-size.rs  clang-delta-reduce-class-template-param.py  clang-delta-reduce-class-template-param.rs  (+106 more)
src/: error.rs  git.rs  interesting.rs  lib.rs  main.rs  oracle.rs  queue.rs  reducers.rs  reductions.rs  score.rs  signposts.rs  test_case.rs  test_utils.rs  traits.rs
src/actors/: logger.rs  mod.rs  reducer.rs  sigint.rs  supervisor.rs  worker.rs
tests/: counting.sh  tests.rs  tests.sh
tests/expectations/: balanced-angle-0  balanced-angle-1  balanced-curly-0  balanced-curly-2  balanced-curly-3  balanced-curly-4  balanced-curly-5  balanced-paren-0  balanced-paren-1  balanced-paren-2  balanced-paren-3  balanced-paren-4  balanced-paren-5  balanced-paren-6  balanced-paren-7  balanced-paren-8  balanced-paren-9  balanced-square-1  blank-0  blank-1  chunks-1  chunks-2  chunks-3  chunks-4  chunks-5  chunks-6  chunks-8  clang-delta-reduce-class-template-param-0  clang-delta-remove-unused-outer-class-0  clang-format-0  clex-rename-toks-0  clex-rename-toks-1  clex-rename-toks-2  clex-rename-toks-3  clex-rename-toks-4  clex-rm-toks-1-0  clex-rm-toks-1-1  clex-rm-toks-1-2  clex-rm-toks-1-3  includes-0  (+9 more)
tests/fixtures/: cannot-reduce.txt  lorem-ipsum.txt  lorem-ipsum.txt.orig  nested-classes.cpp  parens.txt  some-includes.cpp  wow.cpp
tests/predicates/: class-nine-compiles.sh  has-lorem.sh  is-cannot-reduce.sh
tests/reducers/: alphabet.sh  counting.sh  indent.py  lines.py  lines.sh  tails.sh
