[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
description = "A parallel, language agnostic, automatic test case reducer."
name = "preduce"
version = "0.1.0"

[[bin]]
doc = false
name = "preduce"
path = "src/bin/preduce.rs"

[[bin]]
doc = false
name = "preduce-reducer-blank"
path = "reducers/blank.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-format"
path = "reducers/clang-format.rs"

[[bin]]
doc = false
name = "preduce-reducer-chunks"
path = "reducers/chunks.rs"

[dependencies]
clap = "2.23.1"
ctrlc = "3.0.2"
either = "1.1.0"
fixedbitset = "0.1.6"
histo = "0.1.0"
is_executable = "0.1.0"
num_cpus = "1.3.0"
rand = "0.3.15"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
tempdir = "0.3.5"

[dependencies.preduce_ipc_types]
path = "./preduce_ipc_types"
version = "0.1.0"

[dependencies.preduce_reducer_script]
path = "./preduce_reducer_script"
version = "0.1.0"

[dependencies.signpost]
optional = true
version = "0.1.0"

[dev-dependencies]
lazy_static = "0.2.9"

[lib]
path = "src/lib.rs"
[profile.release]
debug = true
[target."cfg(unix)".dependencies]
libc = "0.2.26"

[workspace]
