[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
description = "A parallel, language agnostic, automatic test case reducer."
name = "preduce"
version = "0.1.0"

[[bin]]
doc = false
name = "preduce"
path = "src/bin/preduce.rs"

[[bin]]
doc = false
name = "preduce-reducer-blank"
path = "reducers/blank.rs"

[[bin]]
doc = false
name = "preduce-reducer-chunks"
path = "reducers/chunks.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-aggregate-to-scalar"
path = "reducers/clang-delta-aggregate-to-scalar.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-callexpr-to-value"
path = "reducers/clang-delta-callexpr-to-value.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-class-template-to-class"
path = "reducers/clang-delta-class-template-to-class.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-combine-global-var"
path = "reducers/clang-delta-combine-global-var.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-combine-local-var"
path = "reducers/clang-delta-combine-local-var.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-copy-propagation"
path = "reducers/clang-delta-copy-propagation.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-empty-struct-to-int"
path = "reducers/clang-delta-empty-struct-to-int.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-instantiate-template-param"
path = "reducers/clang-delta-instantiate-template-param.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-instantiate-template-type-param-to-int"
path = "reducers/clang-delta-instantiate-template-type-param-to-int.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-lift-assignment-expr"
path = "reducers/clang-delta-lift-assignment-expr.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-local-to-global"
path = "reducers/clang-delta-local-to-global.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-move-function-body"
path = "reducers/clang-delta-move-function-body.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-move-global-var"
path = "reducers/clang-delta-move-global-var.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-param-to-global"
path = "reducers/clang-delta-param-to-global.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-param-to-local"
path = "reducers/clang-delta-param-to-local.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-reduce-array-dim"
path = "reducers/clang-delta-reduce-array-dim.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-reduce-array-size"
path = "reducers/clang-delta-reduce-array-size.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-reduce-class-template-param"
path = "reducers/clang-delta-reduce-class-template-param.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-reduce-pointer-level"
path = "reducers/clang-delta-reduce-pointer-level.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-reduce-pointer-pairs"
path = "reducers/clang-delta-reduce-pointer-pairs.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-remove-addr-taken"
path = "reducers/clang-delta-remove-addr-taken.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-remove-array"
path = "reducers/clang-delta-remove-array.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-remove-base-class"
path = "reducers/clang-delta-remove-base-class.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-remove-ctor-initializer"
path = "reducers/clang-delta-remove-ctor-initializer.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-remove-enum-member-value"
path = "reducers/clang-delta-remove-enum-member-value.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-remove-namespace"
path = "reducers/clang-delta-remove-namespace.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-remove-nested-function"
path = "reducers/clang-delta-remove-nested-function.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-remove-pointer"
path = "reducers/clang-delta-remove-pointer.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-remove-trivial-base-template"
path = "reducers/clang-delta-remove-trivial-base-template.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-remove-unresolved-base"
path = "reducers/clang-delta-remove-unresolved-base.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-remove-unused-enum-member"
path = "reducers/clang-delta-remove-unused-enum-member.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-remove-unused-field"
path = "reducers/clang-delta-remove-unused-field.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-remove-unused-function"
path = "reducers/clang-delta-remove-unused-function.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-remove-unused-outer-class"
path = "reducers/clang-delta-remove-unused-outer-class.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-rename-class"
path = "reducers/clang-delta-rename-class.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-rename-cxx-method"
path = "reducers/clang-delta-rename-cxx-method.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-rename-fun"
path = "reducers/clang-delta-rename-fun.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-rename-param"
path = "reducers/clang-delta-rename-param.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-rename-var"
path = "reducers/clang-delta-rename-var.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-replace-array-access-with-index"
path = "reducers/clang-delta-replace-array-access-with-index.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-replace-array-index-var"
path = "reducers/clang-delta-replace-array-index-var.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-replace-callexpr"
path = "reducers/clang-delta-replace-callexpr.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-replace-class-with-base-template-spec"
path = "reducers/clang-delta-replace-class-with-base-template-spec.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-replace-dependent-name"
path = "reducers/clang-delta-replace-dependent-name.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-replace-dependent-typedef"
path = "reducers/clang-delta-replace-dependent-typedef.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-replace-derived-class"
path = "reducers/clang-delta-replace-derived-class.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-replace-function-def-with-decl"
path = "reducers/clang-delta-replace-function-def-with-decl.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-replace-one-level-typedef-type"
path = "reducers/clang-delta-replace-one-level-typedef-type.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-replace-simple-typedef"
path = "reducers/clang-delta-replace-simple-typedef.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-replace-undefined-function"
path = "reducers/clang-delta-replace-undefined-function.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-return-void"
path = "reducers/clang-delta-return-void.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-simple-inliner"
path = "reducers/clang-delta-simple-inliner.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-simplify-callexpr"
path = "reducers/clang-delta-simplify-callexpr.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-simplify-comma-expr"
path = "reducers/clang-delta-simplify-comma-expr.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-simplify-dependent-typedef"
path = "reducers/clang-delta-simplify-dependent-typedef.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-simplify-if"
path = "reducers/clang-delta-simplify-if.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-simplify-nested-class"
path = "reducers/clang-delta-simplify-nested-class.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-simplify-recursive-template-instantiation"
path = "reducers/clang-delta-simplify-recursive-template-instantiation.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-simplify-struct-union-decl"
path = "reducers/clang-delta-simplify-struct-union-decl.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-simplify-struct"
path = "reducers/clang-delta-simplify-struct.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-template-arg-to-int"
path = "reducers/clang-delta-template-arg-to-int.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-template-non-type-arg-to-int"
path = "reducers/clang-delta-template-non-type-arg-to-int.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-unify-function-decl"
path = "reducers/clang-delta-unify-function-decl.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-union-to-struct"
path = "reducers/clang-delta-union-to-struct.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-vector-to-array"
path = "reducers/clang-delta-vector-to-array.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-format"
path = "reducers/clang-format.rs"

[[bin]]
doc = false
name = "preduce-reducer-includes"
path = "reducers/includes.rs"

[dependencies]
clap = "2.23.1"
ctrlc = "3.0.2"
either = "1.1.0"
fixedbitset = "0.1.6"
histo = "0.1.0"
is_executable = "0.1.0"
lazy_static = "0.2.9"
num_cpus = "1.3.0"
rand = "0.3.15"
regex = "0.2.2"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
tempdir = "0.3.5"

[dependencies.preduce_ipc_types]
path = "./preduce_ipc_types"
version = "0.1.0"

[dependencies.preduce_reducer_script]
path = "./preduce_reducer_script"
version = "0.1.0"

[dependencies.signpost]
optional = true
version = "0.1.0"

[lib]
path = "src/lib.rs"
[profile.release]
debug = true
[target."cfg(unix)".dependencies]
libc = "0.2.26"

[workspace]
