[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
description = "A parallel, language agnostic, automatic test case reducer."
name = "preduce"
version = "0.1.0"

[[bin]]
doc = false
name = "preduce"
path = "src/bin/preduce.rs"

[[bin]]
doc = false
name = "preduce-reducer-balanced-angle"
path = "src/bin/reducers/balanced-angle.rs"

[[bin]]
doc = false
name = "preduce-reducer-balanced-curly"
path = "src/bin/reducers/balanced-curly.rs"

[[bin]]
doc = false
name = "preduce-reducer-balanced-paren"
path = "src/bin/reducers/balanced-paren.rs"

[[bin]]
doc = false
name = "preduce-reducer-balanced-square"
path = "src/bin/reducers/balanced-square.rs"

[[bin]]
doc = false
name = "preduce-reducer-blank"
path = "src/bin/reducers/blank.rs"

[[bin]]
doc = false
name = "preduce-reducer-chunks"
path = "src/bin/reducers/chunks.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-aggregate-to-scalar"
path = "src/bin/reducers/clang-delta-aggregate-to-scalar.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-callexpr-to-value"
path = "src/bin/reducers/clang-delta-callexpr-to-value.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-class-template-to-class"
path = "src/bin/reducers/clang-delta-class-template-to-class.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-combine-global-var"
path = "src/bin/reducers/clang-delta-combine-global-var.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-combine-local-var"
path = "src/bin/reducers/clang-delta-combine-local-var.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-copy-propagation"
path = "src/bin/reducers/clang-delta-copy-propagation.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-empty-struct-to-int"
path = "src/bin/reducers/clang-delta-empty-struct-to-int.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-instantiate-template-param"
path = "src/bin/reducers/clang-delta-instantiate-template-param.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-instantiate-template-type-param-to-int"
path = "src/bin/reducers/clang-delta-instantiate-template-type-param-to-int.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-lift-assignment-expr"
path = "src/bin/reducers/clang-delta-lift-assignment-expr.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-local-to-global"
path = "src/bin/reducers/clang-delta-local-to-global.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-move-function-body"
path = "src/bin/reducers/clang-delta-move-function-body.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-move-global-var"
path = "src/bin/reducers/clang-delta-move-global-var.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-param-to-global"
path = "src/bin/reducers/clang-delta-param-to-global.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-param-to-local"
path = "src/bin/reducers/clang-delta-param-to-local.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-reduce-array-dim"
path = "src/bin/reducers/clang-delta-reduce-array-dim.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-reduce-array-size"
path = "src/bin/reducers/clang-delta-reduce-array-size.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-reduce-class-template-param"
path = "src/bin/reducers/clang-delta-reduce-class-template-param.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-reduce-pointer-level"
path = "src/bin/reducers/clang-delta-reduce-pointer-level.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-reduce-pointer-pairs"
path = "src/bin/reducers/clang-delta-reduce-pointer-pairs.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-remove-addr-taken"
path = "src/bin/reducers/clang-delta-remove-addr-taken.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-remove-array"
path = "src/bin/reducers/clang-delta-remove-array.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-remove-base-class"
path = "src/bin/reducers/clang-delta-remove-base-class.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-remove-ctor-initializer"
path = "src/bin/reducers/clang-delta-remove-ctor-initializer.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-remove-enum-member-value"
path = "src/bin/reducers/clang-delta-remove-enum-member-value.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-remove-namespace"
path = "src/bin/reducers/clang-delta-remove-namespace.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-remove-nested-function"
path = "src/bin/reducers/clang-delta-remove-nested-function.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-remove-pointer"
path = "src/bin/reducers/clang-delta-remove-pointer.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-remove-trivial-base-template"
path = "src/bin/reducers/clang-delta-remove-trivial-base-template.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-remove-unresolved-base"
path = "src/bin/reducers/clang-delta-remove-unresolved-base.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-remove-unused-enum-member"
path = "src/bin/reducers/clang-delta-remove-unused-enum-member.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-remove-unused-field"
path = "src/bin/reducers/clang-delta-remove-unused-field.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-remove-unused-function"
path = "src/bin/reducers/clang-delta-remove-unused-function.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-remove-unused-outer-class"
path = "src/bin/reducers/clang-delta-remove-unused-outer-class.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-rename-class"
path = "src/bin/reducers/clang-delta-rename-class.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-rename-cxx-method"
path = "src/bin/reducers/clang-delta-rename-cxx-method.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-rename-fun"
path = "src/bin/reducers/clang-delta-rename-fun.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-rename-param"
path = "src/bin/reducers/clang-delta-rename-param.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-rename-var"
path = "src/bin/reducers/clang-delta-rename-var.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-replace-array-access-with-index"
path = "src/bin/reducers/clang-delta-replace-array-access-with-index.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-replace-array-index-var"
path = "src/bin/reducers/clang-delta-replace-array-index-var.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-replace-callexpr"
path = "src/bin/reducers/clang-delta-replace-callexpr.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-replace-class-with-base-template-spec"
path = "src/bin/reducers/clang-delta-replace-class-with-base-template-spec.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-replace-dependent-name"
path = "src/bin/reducers/clang-delta-replace-dependent-name.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-replace-dependent-typedef"
path = "src/bin/reducers/clang-delta-replace-dependent-typedef.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-replace-derived-class"
path = "src/bin/reducers/clang-delta-replace-derived-class.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-replace-function-def-with-decl"
path = "src/bin/reducers/clang-delta-replace-function-def-with-decl.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-replace-one-level-typedef-type"
path = "src/bin/reducers/clang-delta-replace-one-level-typedef-type.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-replace-simple-typedef"
path = "src/bin/reducers/clang-delta-replace-simple-typedef.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-replace-undefined-function"
path = "src/bin/reducers/clang-delta-replace-undefined-function.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-return-void"
path = "src/bin/reducers/clang-delta-return-void.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-simple-inliner"
path = "src/bin/reducers/clang-delta-simple-inliner.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-simplify-callexpr"
path = "src/bin/reducers/clang-delta-simplify-callexpr.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-simplify-comma-expr"
path = "src/bin/reducers/clang-delta-simplify-comma-expr.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-simplify-dependent-typedef"
path = "src/bin/reducers/clang-delta-simplify-dependent-typedef.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-simplify-if"
path = "src/bin/reducers/clang-delta-simplify-if.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-simplify-nested-class"
path = "src/bin/reducers/clang-delta-simplify-nested-class.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-simplify-recursive-template-instantiation"
path = "src/bin/reducers/clang-delta-simplify-recursive-template-instantiation.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-simplify-struct-union-decl"
path = "src/bin/reducers/clang-delta-simplify-struct-union-decl.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-simplify-struct"
path = "src/bin/reducers/clang-delta-simplify-struct.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-template-arg-to-int"
path = "src/bin/reducers/clang-delta-template-arg-to-int.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-template-non-type-arg-to-int"
path = "src/bin/reducers/clang-delta-template-non-type-arg-to-int.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-unify-function-decl"
path = "src/bin/reducers/clang-delta-unify-function-decl.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-union-to-struct"
path = "src/bin/reducers/clang-delta-union-to-struct.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-delta-vector-to-array"
path = "src/bin/reducers/clang-delta-vector-to-array.rs"

[[bin]]
doc = false
name = "preduce-reducer-clang-format"
path = "src/bin/reducers/clang-format.rs"

[[bin]]
doc = false
name = "preduce-reducer-clex-define"
path = "src/bin/reducers/clex-define.rs"

[[bin]]
doc = false
name = "preduce-reducer-clex-delete-string"
path = "src/bin/reducers/clex-delete-string.rs"

[[bin]]
doc = false
name = "preduce-reducer-clex-rename-toks"
path = "src/bin/reducers/clex-rename-toks.rs"

[[bin]]
doc = false
name = "preduce-reducer-clex-rm-tok-pattern-4"
path = "src/bin/reducers/clex-rm-tok-pattern-4.rs"

[[bin]]
doc = false
name = "preduce-reducer-clex-rm-toks-1"
path = "src/bin/reducers/clex-rm-toks-1.rs"

[[bin]]
doc = false
name = "preduce-reducer-clex-rm-toks-10"
path = "src/bin/reducers/clex-rm-toks-10.rs"

[[bin]]
doc = false
name = "preduce-reducer-clex-rm-toks-11"
path = "src/bin/reducers/clex-rm-toks-11.rs"

[[bin]]
doc = false
name = "preduce-reducer-clex-rm-toks-12"
path = "src/bin/reducers/clex-rm-toks-12.rs"

[[bin]]
doc = false
name = "preduce-reducer-clex-rm-toks-13"
path = "src/bin/reducers/clex-rm-toks-13.rs"

[[bin]]
doc = false
name = "preduce-reducer-clex-rm-toks-14"
path = "src/bin/reducers/clex-rm-toks-14.rs"

[[bin]]
doc = false
name = "preduce-reducer-clex-rm-toks-15"
path = "src/bin/reducers/clex-rm-toks-15.rs"

[[bin]]
doc = false
name = "preduce-reducer-clex-rm-toks-16"
path = "src/bin/reducers/clex-rm-toks-16.rs"

[[bin]]
doc = false
name = "preduce-reducer-clex-rm-toks-2"
path = "src/bin/reducers/clex-rm-toks-2.rs"

[[bin]]
doc = false
name = "preduce-reducer-clex-rm-toks-3"
path = "src/bin/reducers/clex-rm-toks-3.rs"

[[bin]]
doc = false
name = "preduce-reducer-clex-rm-toks-4"
path = "src/bin/reducers/clex-rm-toks-4.rs"

[[bin]]
doc = false
name = "preduce-reducer-clex-rm-toks-5"
path = "src/bin/reducers/clex-rm-toks-5.rs"

[[bin]]
doc = false
name = "preduce-reducer-clex-rm-toks-6"
path = "src/bin/reducers/clex-rm-toks-6.rs"

[[bin]]
doc = false
name = "preduce-reducer-clex-rm-toks-7"
path = "src/bin/reducers/clex-rm-toks-7.rs"

[[bin]]
doc = false
name = "preduce-reducer-clex-rm-toks-8"
path = "src/bin/reducers/clex-rm-toks-8.rs"

[[bin]]
doc = false
name = "preduce-reducer-clex-rm-toks-9"
path = "src/bin/reducers/clex-rm-toks-9.rs"

[[bin]]
doc = false
name = "preduce-reducer-includes"
path = "src/bin/reducers/includes.rs"

[[bin]]
doc = false
name = "preduce-reducer-topformflat-0"
path = "src/bin/reducers/topformflat-0.rs"

[[bin]]
doc = false
name = "preduce-reducer-topformflat-1"
path = "src/bin/reducers/topformflat-1.rs"

[[bin]]
doc = false
name = "preduce-reducer-topformflat-10"
path = "src/bin/reducers/topformflat-10.rs"

[[bin]]
doc = false
name = "preduce-reducer-topformflat-2"
path = "src/bin/reducers/topformflat-2.rs"

[[bin]]
doc = false
name = "preduce-reducer-topformflat-3"
path = "src/bin/reducers/topformflat-3.rs"

[[bin]]
doc = false
name = "preduce-reducer-topformflat-4"
path = "src/bin/reducers/topformflat-4.rs"

[[bin]]
doc = false
name = "preduce-reducer-topformflat-6"
path = "src/bin/reducers/topformflat-6.rs"

[[bin]]
doc = false
name = "preduce-reducer-topformflat-8"
path = "src/bin/reducers/topformflat-8.rs"

[dependencies]
blake2 = "0.6.1"
clap = "2.23.1"
ctrlc = "3.0.2"
either = "1.1.0"
fixedbitset = "0.1.6"
generic-array = "0.8.0"
histo = "0.1.0"
is_executable = "0.1.0"
lazy_static = "0.2.9"
lru-cache = "0.1.1"
num_cpus = "1.3.0"
regex = "0.2.2"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
tempdir = "0.3.5"
typenum = "1.9.0"

[dependencies.preduce_balanced_reducer]
path = "./preduce_balanced_reducer"
version = "0.1.0"

[dependencies.preduce_chunks_reducer]
path = "./preduce_chunks_reducer"
version = "0.1.0"

[dependencies.preduce_clang_delta_reducer]
path = "./preduce_clang_delta_reducer"
version = "0.1.0"

[dependencies.preduce_clex_reducer]
path = "./preduce_clex_reducer"
version = "0.1.0"

[dependencies.preduce_ipc_types]
path = "./preduce_ipc_types"
version = "0.1.0"

[dependencies.preduce_ranges_reducer]
path = "./preduce_ranges_reducer"
version = "0.1.0"

[dependencies.preduce_reducer_script]
path = "./preduce_reducer_script"
version = "0.1.0"

[dependencies.preduce_regex_reducer]
path = "./preduce_regex_reducer"
version = "0.1.0"

[dependencies.preduce_topformflat_reducer]
path = "./preduce_topformflat_reducer"
version = "0.1.0"

[dependencies.signpost]
optional = true
version = "0.1.0"

[lib]
path = "src/lib.rs"
[profile.release]
debug = true
[target."cfg(unix)".dependencies]
libc = "0.2.26"

[workspace]
