[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
name = "preduce_reducer_script"
version = "0.1.0"
workspace = ".."

[dependencies]
is_executable = "0.1.0"
lazy_static = "0.2.9"
regex = "0.2.2"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
tempdir = "0.3.5"

[dependencies.preduce_ipc_types]
path = "../preduce_ipc_types"
version = "0.1.0"
