[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
name = "preduce_topformflat_reducer"
version = "0.1.0"

[dependencies]
lazy_static = "0.2.9"
serde = "1.0.15"
serde_derive = "1.0.15"
tempdir = "0.3.5"

[dependencies.preduce_chunks_reducer]
path = "../preduce_chunks_reducer"
version = "0.1.0"

[dependencies.preduce_ranges_reducer]
path = "../preduce_ranges_reducer"
version = "0.1.0"

[dependencies.preduce_reducer_script]
path = "../preduce_reducer_script"
version = "0.1.0"

